Add portable run.sh launcher; document terminal, Gradle, and Maven build paths