@@ -38,7 +38,7 @@ Both are vendored locally in `lib/` (an all-in-one LWJGL 3.4.2 custom distributi
 
 ### Prerequisites
 
-*   **JDK 25** — GraalVM 25 recommended (see §11 of `preferences.txt` for the native-image compatibility rules); any JDK 25 works for the JVM path. `scratch/run.sh` auto-detects it (`JAVA_HOME` overrides).
+*   **JDK 25** — GraalVM 25 recommended (see §11 of `preferences.txt` for the native-image compatibility rules); any JDK 25 works for the JVM path. `run.sh` auto-detects it (`JAVA_HOME` overrides).
 *   **Vulkan SDK** (macOS, optional) — enables validation layers. Auto-detected from the newest install under `~/VulkanSDK`; `VULKAN_SDK` overrides.
 
 ### How to Run
@@ -46,29 +46,34 @@ Both are vendored locally in `lib/` (an all-in-one LWJGL 3.4.2 custom distributi
 The canonical path builds everything and launches the windowed demo:
 
 ```bash
-bash scratch/run.sh
+bash run.sh
 ```
 
-`run.sh` is portable (no hardcoded user paths). It compiles all of `src/` plus `scratch/EngineTest.java` with `--release 25 --enable-preview`, then runs `EngineTest` under the same flags.
+`run.sh` is portable (no hardcoded user paths). It resolves a Java 25 JDK and the Vulkan SDK automatically, compiles all of `src/` plus `scratch/EngineTest.java` with `--release 25 --enable-preview`, then runs `EngineTest` under the same flags.
 
 ### Alternative Builds
 
-Gradle ("elephant"):
+**Terminal (javac / single-file runtime, no build tool required)** — use `run.sh` above. For manual compilation from an IDE's terminal:
+
+```bash
+javac -d out/production/anti -cp "out/production/anti:lib/*:lib/oshi/*:lib/lwjgl-release-3.4.2-custom/*" --release 25 --enable-preview $(find src -name "*.java" -not -path "*/api/*" -not -name "FFMRegistrationFeature.java") scratch/EngineTest.java
+java --enable-preview --enable-native-access=ALL-UNNAMED -Xmx64m -cp "out/production/anti:lib/lwjgl-release-3.4.2-custom/*:lib/oshi/*" EngineTest
+```
+
+**Gradle ("elephant")** — requires a JDK 25; point `JAVA_HOME` at one if `gradlew` picks up a different JDK. For validation layers, `runEngine` expects the Vulkan SDK env (source the SDK's `setup-env.sh` first, as `run.sh` does automatically); otherwise it runs with validation unavailable.
 
 ```bash
 ./gradlew compileJava      # build the engine
 ./gradlew runEngine        # build + launch the windowed EngineTest demo
 ```
 
-Requires a JDK 25 — point `JAVA_HOME` at one if `gradlew` picks up a different JDK. For validation layers, `runEngine` expects the Vulkan SDK env (source the SDK's `setup-env.sh` first, as `run.sh` does automatically); otherwise it runs with validation unavailable.
-
-Maven:
+**Maven:**
 
 ```bash
 mvn compile                # build the engine library (LWJGL from Central, OSHI from lib/)
 ```
 
-Note: `mvn compile` builds the engine only — the `scratch/` demos are not part of the Maven build. Launch the demo via `scratch/run.sh` or `./gradlew runEngine` instead.
+Note: `mvn compile` builds the engine only — the `scratch/` demos are not part of the Maven build. Launch the demo via `bash run.sh` or `./gradlew runEngine` instead.
 
 ### Engine Runtime Notes
 
